--- a/src/index.html
+++ b/src/index.html
@@ -5,73 +5,139 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/dist/output.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css">
 </head>
 
 
 
 <body class="bg-white">
-    <!-- Header Navbar -->
-    <nav class="fixed top-0 left-0 z-20 w-full border-b border-gray-200 bg-white py-2.5 px-6 sm:px-4">
-        <div class="container mx-auto flex max-w-6xl flex-wrap items-center justify-between">
-            <a href="#" class="flex items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="mr-3 h-6 text-blue-500 sm:h-9">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M21 7.5l-9-5.25L3 7.5m18 0l-9 5.25m9-5.25v9l-9 5.25M3 7.5l9 5.25M3 7.5v9l9 5.25m0-9v9" />
-                </svg>
+    <section class="text-gray-600 body-font bg-gray-50  flex justify-center items-center">
+        <div class="container px-5 py-24 mx-auto">
+            <div class="flex m-4 text-center">
+                <div class="p-4 sm:w-1/2 lg:w-1/3 w-full hover:scale-105 duration-500">
+                    <div
+                        class=" flex items-center  justify-between p-4  rounded-lg bg-white shadow-indigo-50 shadow-md">
+                        <div>
+                            <h2 class="text-gray-900 text-lg font-bold">Total Ballance</h2>
+                            <h3 class="mt-2 text-xl font-bold text-yellow-500 text-left">+ 150.000 ₭</h3>
+                            <p class="text-sm font-semibold text-gray-400">Last Transaction</p>
+                            <button
+                                class="text-sm mt-6 px-4 py-2 bg-yellow-400 text-white rounded-lg  tracking-wider hover:bg-yellow-300 outline-none">Add
+                                to cart</button>
+                        </div>
+                        <div
+                            class="bg-gradient-to-tr from-yellow-500 to-yellow-400 w-32 h-32  rounded-full shadow-2xl shadow-yellow-400 border-white  border-dashed border-2  flex justify-center items-center ">
+                            <div>
+                                <h1 class="text-white text-2xl">Basic</h1>
+                            </div>
+                        </div>
+                    </div>
 
-                <span class="self-center whitespace-nowrap text-xl font-semibold">Termcode</span>
-            </a>
-            <div class="mt-2 sm:mt-0 sm:flex md:order-2">
-                <!-- Login Button -->
-                <button type="button"
-                    class="rounde mr-3 hidden border border-blue-700 py-1.5 px-6 text-center text-sm font-medium text-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300 md:inline-block rounded-lg">Login</button>
-                <button type="button"
-                    class="rounde mr-3 hidden bg-blue-700 py-1.5 px-6 text-center text-sm font-medium text-white hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 md:mr-0 md:inline-block rounded-lg">Register</button>
-                <!-- Register Button -->
-                <button data-collapse-toggle="navbar-sticky" type="button"
-                    class="inline-flex items-center rounded-lg p-2 text-sm text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 md:hidden"
-                    aria-controls="navbar-sticky" aria-expanded="false">
-                    <span class="sr-only">Open main menu</span>
-                    <svg class="h-6 w-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd"
-                            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-                            clip-rule="evenodd"></path>
-                    </svg>
-                </button>
+                </div>
+                <div class="p-4 sm:w-1/2 lg:w-1/3 w-full hover:scale-105 duration-500">
+                    <div
+                        class=" flex items-center  justify-between p-4  rounded-lg bg-white shadow-indigo-50 shadow-md">
+                        <div>
+                            <h2 class="text-gray-900 text-lg font-bold">Total Ballance</h2>
+                            <h3 class="mt-2 text-xl font-bold text-orange-500 text-left">+ 150.000 ₭</h3>
+                            <p class="text-sm font-semibold text-gray-400">Last Transaction</p>
+                            <button
+                                class="text-sm mt-6 px-4 py-2 bg-orange-400  text-white rounded-lg  tracking-wider hover:bg-orange-500 outline-none">Add
+                                to cart</button>
+                        </div>
+                        <div
+                            class="bg-gradient-to-tr from-orange-500 to-orange-400 w-32 h-32  rounded-full shadow-2xl shadow-orange-400 border-white  border-dashed border-2  flex justify-center items-center ">
+                            <div>
+                                <h1 class="text-white text-2xl">Basic</h1>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="p-4 sm:w-1/2 lg:w-1/3 w-full hover:scale-105 duration-500">
+                    <div
+                        class=" flex items-center  justify-between p-4  rounded-lg bg-white shadow-indigo-50 shadow-md">
+                        <div>
+                            <h2 class="text-gray-900 text-lg font-bold">Total Ballance</h2>
+                            <h3 class="mt-2 text-xl font-bold text-red-500 text-left">+ 150.000 ₭</h3>
+                            <p class="text-sm font-semibold text-gray-400">Last Transaction</p>
+                            <button
+                                class="text-sm mt-6 px-4 py-2 bg-red-400  text-white rounded-lg  tracking-wider hover:bg-red-500 outline-none">Add
+                                to cart</button>
+                        </div>
+                        <div
+                            class="bg-gradient-to-tr from-red-500 to-red-400 w-32 h-32  rounded-full shadow-2xl shadow-red-400 border-white  border-dashed border-2  flex justify-center items-center ">
+                            <div>
+                                <h1 class="text-white text-2xl">Basic</h1>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="p-4 sm:w-1/2 lg:w-1/3 w-full hover:scale-105 duration-500">
+                    <div
+                        class=" flex items-center  justify-between p-4  rounded-lg bg-white shadow-indigo-50 shadow-md">
+                        <div>
+                            <h2 class="text-gray-900 text-lg font-bold">Total Ballance</h2>
+                            <h3 class="mt-2 text-xl font-bold text-green-500 text-left">+ 150.000 ₭</h3>
+                            <p class="text-sm font-semibold text-gray-400">Last Transaction</p>
+                            <button
+                                class="text-sm mt-6 px-4 py-2 bg-green-400  text-white rounded-lg  tracking-wider hover:bg-green-500 outline-none">Add
+                                to cart</button>
+                        </div>
+                        <div
+                            class="bg-gradient-to-tr from-green-500 to-green-500 w-32 h-32  rounded-full shadow-2xl shadow-green-400 border-white  border-dashed border-2  flex justify-center items-center ">
+                            <div>
+                                <h1 class="text-white text-2xl">Basic</h1>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="p-4 sm:w-1/2 lg:w-1/3 w-full hover:scale-105 duration-500">
+                    <div
+                        class=" flex items-center  justify-between p-4  rounded-lg bg-white shadow-indigo-50 shadow-md">
+                        <div>
+                            <h2 class="text-gray-900 text-lg font-bold">Total Ballance</h2>
+                            <h3 class="mt-2 text-xl font-bold text-cyan-500 text-left">+ 150.000 ₭</h3>
+                            <p class="text-sm font-semibold text-gray-400">Last Transaction</p>
+                            <button
+                                class="text-sm mt-6 px-4 py-2 bg-cyan-400  text-white rounded-lg  tracking-wider hover:bg-cyan-500 outline-none">Add
+                                to cart</button>
+                        </div>
+                        <div
+                            class="bg-gradient-to-tr from-cyan-500 to-cyan-400 w-32 h-32  rounded-full shadow-2xl shadow-cyan-400 border-white  border-dashed border-2  flex justify-center items-center ">
+                            <div>
+                                <h1 class="text-white text-2xl">Basic</h1>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="p-4 sm:w-1/2 lg:w-1/3 w-full hover:scale-105 duration-500">
+                    <div
+                        class=" flex items-center  justify-between p-4  rounded-lg bg-white shadow-indigo-50 shadow-md">
+                        <div>
+                            <h2 class="text-gray-900 text-lg font-bold">Total Ballance</h2>
+                            <h3 class="mt-2 text-xl font-bold text-indigo-500 text-left">+ 150.000 ₭</h3>
+                            <p class="text-sm font-semibold text-gray-400">Last Transaction</p>
+                            <button
+                                class="text-sm mt-6 px-4 py-2 bg-indigo-400 text-white rounded-lg  tracking-wider hover:bg-indigo-500 outline-none">Add
+                                to cart</button>
+                        </div>
+                        <div
+                            class="bg-gradient-to-tr from-indigo-500 to-indigo-400 w-32 h-32  rounded-full shadow-2xl shadow-[#304FFE] border-white  border-dashed border-2  flex justify-center items-center ">
+                            <div>
+                                <h1 class="text-white text-2xl">Basic</h1>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
             </div>
-            <div class="hidden w-full items-center justify-between md:order-1 md:flex md:w-auto" id="navbar-sticky">
-                <ul
-                    class="mt-4 flex flex-col rounded-lg border border-gray-100 bg-gray-50 p-4 md:mt-0 md:flex-row md:space-x-8 md:border-0 md:bg-white md:text-sm md:font-medium">
-                    <li>
-                        <a href="#"
-                            class="block rounded bg-blue-700 py-2 pl-3 pr-4 text-white md:bg-transparent md:p-0 md:text-blue-700"
-                            aria-current="page">Home</a>
-                    </li>
-                    <li>
-                        <a href="#"
-                            class="block rounded py-2 pl-3 pr-4 text-gray-700 hover:bg-gray-100 md:p-0 md:hover:bg-transparent md:hover:text-blue-700">About</a>
-                    </li>
-                    <li>
-                        <a href="#"
-                            class="block rounded py-2 pl-3 pr-4 text-gray-700 hover:bg-gray-100 md:p-0 md:hover:bg-transparent md:hover:text-blue-700">Services</a>
-                    </li>
-                    <li>
-                        <a href="#"
-                            class="block rounded py-2 pl-3 pr-4 text-gray-700 hover:bg-gray-100 md:p-0 md:hover:bg-transparent md:hover:text-blue-700">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-
-    <!-- This is an example component -->
-    <div id="card" class="flex flex-wrap w-52 justify-between items-center  bg-gray-100">
-
-    </div>
-
+    </section>
 
 
 
