--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="../dist/output.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css">
 </head>
 
 
 
 <body class="bg-white">
+    <h1 class="bg-red-800 w-10 h-10 border-2 border-solid border-red-900">hello world</h1>
     <section class="text-gray-600 body-font bg-gray-50  flex justify-center items-center">
         <div class="container px-5 py-24 mx-auto">
             <div class="flex m-4 text-center">
