--- a/src/index.html
+++ b/src/index.html
@@ -139,6 +139,9 @@
 
             </div>
     </section>
+    <footer>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam aliquid quos, eveniet voluptatem vel quidem?</p>
+    </footer>
 
 
 
