--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,10 @@
             </div>
         </footer>
         <!-- component -->
+        <div class="nabar">
+          MUSLIMBEK
 
+        </div>
 
 
     <script src="./app.js"></script>
